--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
 	"name": "stateful-button-react",
-	"version": "2.0.0",
+	"version": "3.0.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev --turbopack",
-		"build": "next build --turbopack",
+		"dev": "next dev",
+		"build": "next build",
 		"start": "next start",
-		"lint": "eslint",
+		"lint": "eslint .",
 		"cypress:open": "cypress open --component",
 		"cypress:run": "cypress run --component",
 		"format": "prettier --write .",
@@ -15,37 +15,37 @@
 	},
 	"dependencies": {
 		"@radix-ui/react-dropdown-menu": "^2.1.16",
-		"@radix-ui/react-progress": "^1.1.7",
-		"@radix-ui/react-separator": "^1.1.7",
-		"@radix-ui/react-slot": "^1.2.3",
+		"@radix-ui/react-progress": "^1.1.8",
+		"@radix-ui/react-separator": "^1.1.8",
+		"@radix-ui/react-slot": "^1.2.4",
 		"@radix-ui/react-tabs": "^1.1.13",
 		"@xstate/react": "^6.0.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
-		"lucide-react": "^0.545.0",
-		"motion": "^12.23.24",
-		"next": "15.5.4",
+		"lucide-react": "^0.562.0",
+		"motion": "^12.23.26",
+		"next": "16.1.1",
 		"next-themes": "^0.4.6",
-		"react": "19.2.0",
-		"react-dom": "19.2.0",
-		"shadcn": "3.4.0",
-		"tailwind-merge": "^3.3.1",
-		"xstate": "^5.23.0"
+		"react": "19.2.3",
+		"react-dom": "19.2.3",
+		"shadcn": "3.6.2",
+		"tailwind-merge": "^3.4.0",
+		"xstate": "^5.25.0"
 	},
 	"devDependencies": {
-		"@eslint/eslintrc": "^3.3.1",
-		"@tailwindcss/postcss": "^4.1.14",
-		"@types/node": "^24.7.2",
-		"@types/react": "^19.2.2",
-		"@types/react-dom": "^19.2.1",
-		"cypress": "^15.4.0",
-		"eslint": "^9.37.0",
-		"eslint-config-next": "15.5.4",
+		"@eslint/eslintrc": "^3.3.3",
+		"@tailwindcss/postcss": "^4.1.18",
+		"@types/node": "25.0.3",
+		"@types/react": "^19.2.7",
+		"@types/react-dom": "^19.2.3",
+		"cypress": "^15.8.1",
+		"eslint": "^9.39.2",
+		"eslint-config-next": "16.1.1",
 		"eslint-config-prettier": "^10.1.8",
-		"prettier": "^3.6.2",
-		"prettier-plugin-tailwindcss": "^0.6.14",
-		"shiki": "^3.13.0",
-		"tailwindcss": "^4.1.14",
+		"prettier": "^3.7.4",
+		"prettier-plugin-tailwindcss": "^0.7.2",
+		"shiki": "^3.20.0",
+		"tailwindcss": "^4.1.18",
 		"tw-animate-css": "^1.4.0",
 		"typescript": "^5.9.3"
 	}
